--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,8 @@
   <meta name="author" content="Łukasz Holeczek">
   <meta name="keyword" content="Bootstrap,Admin,Template,Free,Angular,Dashboard,Typescript">
 	<link rel="shortcut icon" href="assets/favicon.ico">
-	<title>CoreUI - Free Angular Admin Template</title>
+	<title>DEMO ỨNG DỤNG TÌM KIẾM NGỮ NGHĨA TRONG LĨNH VỰC ĐOÀN THANH NIÊN
+      </title>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-118965717-3"></script>
   <script>
